@@ -10,6 +10,8 @@ ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
 - System: Fix file name bug in OSFILE.
 - System: Filename translation between RISC OS and Linux for OPENIN,
   OPENOUT and OPENUP.
+- System: Added "-nofull" command line option, to disable switching into
+  full-screen mode (for questionable hardware, e.g. Poulsbo chipsets)
 - MOS: *Refresh, *WinTitle and *FullScreen are now recognised on RISC OS
   builds, but do nothing. (Previously, they raised a "Not Found" error.)
   This is to allow programs written targeting other platforms a better
